--- a/css/bootstrap-overrides.css
+++ b/css/bootstrap-overrides.css
@@ -42,11 +42,7 @@ body code, body kbd, body pre, body samp {
   float: right;
 }
 
-h1 {
-  font-family: 'Lato', Helvetica, Arial, sans-serif;
-}
-
-h2 {
+h1, h2 {
   font-family: 'Lato', Helvetica, Arial, sans-serif;
 }
 
@@ -59,6 +55,12 @@ pre {
   border-radius: 0px;
   border-left: none;
   border-right: none;
+  border-top-color: #e7e7e7;
+  border-top-style: solid;
+  border-top-width: 0.8px;
+  border-bottom-color: #e7e7e7;
+  border-bottom-style: solid;
+  border-bottom-width: 0.8px;
 }
 
 .left-bar, 
@@ -70,9 +72,9 @@ pre {
 }
 
 .silkscreen-post .main {
-  border-top-color: #cccccc;
+  border-top-color: #e7e7e7;
   border-top-style: solid;
-  border-top-width: 1px;
+  border-top-width: 0.8px;
   margin-bottom: 20px;
   padding-bottom: 20px;
 }
@@ -93,6 +95,12 @@ pre {
 @media (min-width: 769px) and (max-width:992px) {
   nav h3 {
     line-height: 1.45;
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar {
+    margin-bottom: 0px;
   }
 }
 
